event edit in pixel.js

--- a/src/components/Inbox/Event/EditEvent/EditEvent.css
+++ b/src/components/Inbox/Event/EditEvent/EditEvent.css
@@ -8,3 +8,10 @@
 .EditEvent .EditEvent_title{
     font-size:2em;
 }
+editevent-btn{
+    display: flex;
+    flex-direction: row;
+}
+editevnet-btn > button {
+    margin-right: 15px !important;
+}
