--- a/src/components/Inbox/Event/Event.css
+++ b/src/components/Inbox/Event/Event.css
@@ -13,6 +13,9 @@
       margin: 20px; } }
   .Event_Card .Event_content {
     text-align: center; }
+    .Event_Card .Event_content span {
+      position: relative;
+      left: 30%; }
     .Event_Card .Event_content h1 {
       margin-top: 0;
       color: #3F51B5;
