--- a/src/components/Inbox/Event/Event.scss
+++ b/src/components/Inbox/Event/Event.scss
@@ -15,6 +15,10 @@
     }
     .Event_content{
       text-align:center;
+      span{
+        position: relative;
+        left:30%;
+      }
       h1{
         margin-top:0;
         color:#3F51B5;
