--- a/src/components/ilgi/Feed/FeedHeader/FeedHeader.scss
+++ b/src/components/ilgi/Feed/FeedHeader/FeedHeader.scss
@@ -1,7 +1,9 @@
 @import "../../../../sass/_mixin.scss";
 @import "../../../../sass/_media.scss";
+@import "../../../../sass/_var.scss";
+
 .FeedHeader {
-  margin-top:80px;
+  margin-top: 80px;
   width: 100vw;
   .FH_form {
     display: block;
@@ -44,26 +46,26 @@
       @include boxshadow-hover-effect;
 
       @include tablet {
-        width: 9vw;
-        height: 9vw;
+        width: 5.5vw;
+        margin:0.5vw;
+        height: 5.5vw;
       }
       @include desktop {
-        width: 6vw;
-        height: 6vw;
+        width: 3vw;
+        height: 3vw;
+        margin: 0.5vw;
       }
       span {
-        display: none;
-        @media (min-width:400px) and (max-width: #{768px - 1px}) {
-          font-size: 1.3em;
-          display: block;
-        }
+        font-family: $hand-writing;
+        font-size: 1.6em;
+        position: relative;
+        top: 15%;
         @include tablet {
-          font-size: 1.3em;
-          display: block;
+          font-size: 1.6em;
+          top: 15%;
         }
         @include desktop {
-          display: block;
-          font-size: 1.8em;
+          font-size: 1.6em;
         }
       }
     }
