--- a/src/components/Inbox/Event/EventFeed/EventFeed.scss
+++ b/src/components/Inbox/Event/EventFeed/EventFeed.scss
@@ -15,6 +15,10 @@
     flex-direction: row;
     flex-wrap: wrap;
     .EF_card {
+      ef-icons{
+        display: flex;
+        justify-content: space-between;
+      }
       margin: 25px auto 0;
       display: block;
       padding: 20px;
@@ -32,10 +36,6 @@
       h3{
          opacity: 0.6;
          font-weight: lighter;
-      }
-      span {
-        margin-right:80%;
-        color: #3f51b5;
       }
     }
   }
